--- a/src/stylus/view-editor.styl
+++ b/src/stylus/view-editor.styl
@@ -25,8 +25,10 @@
 
 \******************************************************************************/
 
-.view-editor-page .content
-  height calc(100vh - 120px)  // Increased from 180px to give more editor space
+// FIX: Selector was ".view-editor-page .content" but HTML structure is
+// ".content.view-editor" (two classes on same element, not nested)
+.content.view-editor
+  height calc(100vh - 120px)
   overflow hidden
 
 .view-editor
